--- a/apps/critical-calc/index.html
+++ b/apps/critical-calc/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-custom_js: [tooltip, character/character-list, defense/defense-i18n]
+custom_js: [tooltip, character/spoiler-state, character/character-list, defense/defense-i18n]
 custom_data: [tooltip.js, calc/critical-data.js, /data/character_info.js]
 permalink: /critical-calc/
 language: kr
