--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-custom_js: [tooltip, character/character-list, defense/defense-i18n]
+custom_js: [tooltip, character/spoiler-state, character/character-list, defense/defense-i18n]
 custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, wonder/weapons.js, wonder/skills.js,
 /data/character_info.js]
 permalink: /defense-calc/
