--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 custom_css: [character]
+custom_js: [character/spoiler-state]
 permalink: /material-calc/
 language: kr
 title: 육성 계산기 - 페르소나5 더 팬텀 X 루페르넷
