--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_css: []
-custom_js: [tooltip, character/character-list]
+custom_js: [tooltip, character/spoiler-state, character/character-list]
 custom_data: [/data/character_info.js, revelations/revelations.js, wonder/skills.js, wonder/weapons.js]
 permalink: /tactic-maker/
 language: kr
