--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_css: [tactic, tactic-share]
-custom_js: [tooltip, tactic-preview]
+custom_js: [tooltip, character/spoiler-state, tactic-preview]
 custom_data: [tooltip.js, /data/character_info.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js,
 wonder/skills.js]
 permalink: /tactic/tactics.html
